# SIGMOD-2023

./: CMakeLists.txt  README.md  run.sh
baseline/: makefile  run.sh
baseline-solution/: makefile
benchmarks/: benchmark-clusters-dataset-10k-clusters-11-2-100-iters-1-10-50-neighborhood-1-1-50-1.md  benchmark-clusters-dataset-10k-clusters-2-2-10-iters-1-10-50-neighborhood-1-1-10-1.md
evaluator/: groundtruth.cpp  helpers.hpp  input-output.hpp  recall.cpp
hyperparam-benchmarks-nearest-clusters-dataset[10k]-clusters[10:50:510]-iters[1:1:1]-nearest-clusters[10:10:50]/: hyperparam-benchmark-markdown-table.txt.tmp  hyperparam-comb-aprox-knng.bin.tmp
include/: cluster.hpp  helpers.hpp  input-output.hpp  io.h  kmeans.hpp  knng.hpp  point.hpp  typedefs.hpp
scripts/: benchmark-hyperparameters.sh  dataset-downloader.sh  die.sh  find-unique-filename.sh  get-project-root-dir.sh  logfile.sh  new-submission.sh  timer.sh
solutions/kgraph/: CMakeCache.txt  Makefile  cmake_install.cmake  index  kgraph.cpp  search
solutions/near-neighbor-join/: a.out  makefile  output-nnj.txt  run.sh
solutions/near-neighbor-join/src/: heap.hpp  main.cpp
solutions/nearest-clusters/: run.sh
solutions/nearest-clusters/.reprozip-trace/: config.yml  trace.sqlite3
solutions/nearest-clusters/include/: cluster.hpp  kmeans.hpp  point.hpp
solutions/nearest-clusters/src/: knng.cpp  main.cpp
solutions/samples/: io.h  knn-construction.cc  makefile  run.sh
src/: cluster.cpp  input-output.cpp  kmeans.cpp  knng.cpp  main.cpp  point.cpp
